@@ -1,10 +1,12 @@
 package user.service;
 
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.Mockito.when;
 
 import java.time.LocalDateTime;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
@@ -18,6 +20,8 @@ import user.authentication.AuthManager;
 import user.domain.AppUserRepository;
 import user.domain.entities.AppUser;
 import user.domain.enums.Gender;
+import user.domain.objects.AvDates;
+import user.domain.objects.AvDatesDto;
 import user.foreigndomain.enums.Certificate;
 import user.foreigndomain.enums.Position;
 
@@ -39,14 +43,14 @@ public class UserServiceTest {
         Position prefPosition = Position.COX;
         boolean competitive = true;
         Certificate certificate = Certificate.C4;
-        List<LocalDateTime> avDates = Arrays.asList(LocalDateTime.now(), LocalDateTime.now().plusDays(1));
+        List<AvDates> avDates = new ArrayList<>();
 
         AppUser appUser = new AppUser(netId);
         appUser.setGender(gender);
         appUser.setPrefPosition(prefPosition);
         appUser.setCompetitive(competitive);
         appUser.setCertificate(certificate);
-        appUser.setAvDates(avDates);
+        appUser.setAvDatesList(avDates);
 
         when(appUserRepository.findById(netId)).thenReturn(Optional.of(appUser));
 
@@ -55,7 +59,7 @@ public class UserServiceTest {
     }
 
     @Test
-    public void testGetAppUserNotFound() throws NotFoundException {
+    public void testGetAppUserNotFound() {
         String appUserId = "123";
         when(appUserRepository.findById(appUserId)).thenReturn(Optional.empty());
         assertThrows(NotFoundException.class, () -> userService.getAppUser(appUserId));
@@ -69,14 +73,14 @@ public class UserServiceTest {
         Position prefPosition = Position.COX;
         boolean competitive = true;
         Certificate certificate = Certificate.FOURPLUS;
-        List<LocalDateTime> avDates = Arrays.asList(LocalDateTime.now(), LocalDateTime.now().plusDays(1));
+        List<AvDates> avDates = List.of(new AvDates(LocalDateTime.now(), LocalDateTime.now().plusDays(1)));
 
         AppUser appUser = new AppUser(netId);
         appUser.setGender(gender);
         appUser.setPrefPosition(prefPosition);
         appUser.setCompetitive(competitive);
         appUser.setCertificate(certificate);
-        appUser.setAvDates(avDates);
+        appUser.setAvDatesList(avDates);
 
         when(appUserRepository.save(appUser)).thenReturn(appUser);
 
@@ -91,28 +95,28 @@ public class UserServiceTest {
         Position prefPosition1 = Position.COX;
         boolean competitive1 = true;
         Certificate certificate1 = Certificate.NONE;
-        List<LocalDateTime> avDates1 = Arrays.asList(LocalDateTime.now(), LocalDateTime.now().plusDays(1));
+        List<AvDates> avDates1 = List.of(new AvDates(LocalDateTime.now(), LocalDateTime.now().plusDays(1)));
 
         AppUser appUser1 = new AppUser(netId1);
         appUser1.setGender(gender1);
         appUser1.setPrefPosition(prefPosition1);
         appUser1.setCompetitive(competitive1);
         appUser1.setCertificate(certificate1);
-        appUser1.setAvDates(avDates1);
+        appUser1.setAvDatesList(avDates1);
 
         String netId2 = "test456";
         Gender gender2 = Gender.FEMALE;
         Position prefPosition2 = Position.COACH;
         boolean competitive2 = false;
         Certificate certificate2 = Certificate.C4;
-        List<LocalDateTime> avDates2 = Arrays.asList(LocalDateTime.now(), LocalDateTime.now().plusDays(2));
+        List<AvDates> avDates2 = List.of(new AvDates(LocalDateTime.now(), LocalDateTime.now().plusDays(2)));
 
         AppUser appUser2 = new AppUser(netId2);
         appUser2.setGender(gender2);
         appUser2.setPrefPosition(prefPosition2);
         appUser2.setCompetitive(competitive2);
         appUser2.setCertificate(certificate2);
-        appUser2.setAvDates(avDates2);
+        appUser2.setAvDatesList(avDates2);
 
         when(appUserRepository.findAll()).thenReturn(Arrays.asList(appUser1, appUser2));
 
@@ -129,14 +133,14 @@ public class UserServiceTest {
         Position prefPosition = Position.COX;
         boolean competitive = true;
         Certificate certificate = Certificate.NONE;
-        List<LocalDateTime> avDates = Arrays.asList(LocalDateTime.now(), LocalDateTime.now().plusDays(1));
+        List<AvDates> avDates = List.of(new AvDates(LocalDateTime.now(), LocalDateTime.now().plusDays(1)));
 
         AppUser appUser = new AppUser(netId);
         appUser.setGender(gender);
         appUser.setPrefPosition(prefPosition);
         appUser.setCompetitive(competitive);
         appUser.setCertificate(certificate);
-        appUser.setAvDates(avDates);
+        appUser.setAvDatesList(avDates);
 
         when(authManager.getNetId()).thenReturn(netId);
         when(appUserRepository.getAppUserById(netId)).thenReturn(appUser);
@@ -153,14 +157,14 @@ public class UserServiceTest {
         Position prefPosition = Position.COX;
         boolean competitive = true;
         Certificate certificate = Certificate.NONE;
-        List<LocalDateTime> avDates = Arrays.asList(LocalDateTime.now(), LocalDateTime.now().plusDays(1));
+        List<AvDates> avDates = List.of(new AvDates(LocalDateTime.now(), LocalDateTime.now().plusDays(1)));
 
         AppUser appUser = new AppUser(newNetId);
         appUser.setGender(gender);
         appUser.setPrefPosition(prefPosition);
         appUser.setCompetitive(competitive);
         appUser.setCertificate(certificate);
-        appUser.setAvDates(avDates);
+        appUser.setAvDatesList(avDates);
 
         String netId = "test123";
         when(authManager.getNetId()).thenReturn(netId);
@@ -179,7 +183,7 @@ public class UserServiceTest {
         appUser.setPrefPosition(null);
         appUser.setCompetitive(competitive);
         appUser.setCertificate(null);
-        appUser.setAvDates(null);
+        appUser.setAvDatesList(null);
 
         when(authManager.getNetId()).thenReturn(netId);
         when(appUserRepository.getAppUserById(netId)).thenReturn(appUser);
@@ -207,13 +211,61 @@ public class UserServiceTest {
         appUser.setPrefPosition(null);
         appUser.setCompetitive(competitive);
         appUser.setCertificate(null);
-        appUser.setAvDates(null);
+        appUser.setAvDatesList(null);
 
         when(authManager.getNetId()).thenReturn(netId);
         when(appUserRepository.getAppUserById(netId)).thenReturn(appUser);
 
         AppUser appUser1 = new AppUser("wrong");
         assertThrows(IllegalArgumentException.class, () -> userService.updateUser(appUser1));
+    }
+
+    @Test
+    public void getAvDatesTest() {
+        String netId = "test123";
+        Gender gender = Gender.MALE;
+        Position prefPosition = Position.COACH;
+        boolean competitive = true;
+        Certificate certificate = Certificate.NONE;
+        List<AvDates> avDates = List.of(new AvDates(LocalDateTime.now(), LocalDateTime.now().plusDays(1)));
+
+        AppUser user = new AppUser(netId);
+        user.setGender(gender);
+        user.setPrefPosition(prefPosition);
+        user.setCompetitive(competitive);
+        user.setCertificate(certificate);
+        user.setAvDatesList(avDates);
+
+        when(authManager.getNetId()).thenReturn("user");
+        when(appUserRepository.getAppUserById("user")).thenReturn(user);
+
+        assertThat(userService.getAvDates()).isEqualTo(avDates);
+    }
+
+    @Test
+    public void addNewAvDatesTest() {
+        String netId = "test123";
+        Gender gender = Gender.MALE;
+        Position prefPosition = Position.COACH;
+        boolean competitive = true;
+        Certificate certificate = Certificate.NONE;
+        List<AvDates> avDates = new ArrayList<>();
+
+        AppUser user = new AppUser(netId);
+        user.setGender(gender);
+        user.setPrefPosition(prefPosition);
+        user.setCompetitive(competitive);
+        user.setCertificate(certificate);
+        user.setAvDatesList(avDates);
+
+        when(authManager.getNetId()).thenReturn("user");
+        when(appUserRepository.getAppUserById("user")).thenReturn(user);
+
+        LocalDateTime time1 = LocalDateTime.now();
+        LocalDateTime time2 = LocalDateTime.now().plusDays(1);
+        userService.addNewAvDates(new AvDatesDto(time1, time2));
+        List<AvDates> check = List.of(new AvDates(time1, time2));
+        assertThat(user.getAvDatesList()).isEqualTo(check);
     }
 }
 
